--- a/css/styles.css
+++ b/css/styles.css
@@ -146,21 +146,27 @@ img {
 @keyframes firstAnimation {
 	0% {
 		background-color: pink;
+		color: black;
 	}
 	30% {
 		background-color: #757575;
+		color: var(--prime-white);
 	}
 	50% {
 		background-color: var(--active-color);
+		color: yellow;
 	}
 	70% {
 		background-color: red;
+		color: olivedrab;
 	}
 	90% {
 		background-color: black;
+		color: pink;
 	}
 	100% {
 		background-color: aqua;
+		color: #212121;
 	}
 }
 
@@ -188,7 +194,8 @@ img {
 
 .form {
 	width: 600px;
-	outline: 1px solid tomato;
+	background-color: var(--prime-white);
+	border-radius: 6px;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 20px;
@@ -210,8 +217,7 @@ img {
 }
 
 .group {
-	outline: 1px solid green;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 .group-title {
@@ -225,11 +231,41 @@ img {
 }
 
 .topic-options input[type="checkbox"] {
-	width: 15px;
-	height: 15px;
+	width: 12px;
+	height: 12px;
 }
 
 .topic-options label {
 	font-size: 15px;
 	margin-left: 10px;
+}
+
+.experience-options .experience-item {
+	display: flex;
+	align-items: center;
+}
+
+.experience-options label {
+	font-size: 15px;
+	margin-left: 10px;
+}
+
+.foem {
+	display: flex;
+	margin-bottom: 20px;
+}
+
+.foem label {
+	margin-left: 10px;
+}
+
+.form-field .date {
+	background-color: #757575;
+	color: #eeeeee;
+	border: var(--prime-white);
+	border-radius: 8px;
+}
+
+.comment-text {
+	padding: 25px;
 }
