--- a/css/animation.css
+++ b/css/animation.css
@@ -1,33 +1,52 @@
-.container {
-	width: 1120px;
+:root {
+	/* animation style */
+	--time-cub: 800ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 300ms;
+}
+.container-animation {
+	padding: 40px;
+	width: 1200px;
 	margin: 0 auto;
 	display: grid;
 	grid-template-columns: repeat(4, auto);
 	gap: 32px;
 }
 
-.box {
+.container-animation .box {
 	position: relative;
 	width: 256px;
 	height: 256px;
 	background-color: bisque;
 	animation-name: scale-item;
-	animation-duration: 2000ms;
+	animation-duration: 5000ms;
 	animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.box::after {
+.container-animation .box:hover::after {
 	position: absolute;
 	top: 10px;
 	left: 10px;
 	content: "";
 	width: 236px;
 	height: 236px;
-	border: 1px dotted black;
+	border: 5px dotted greenyellow;
 	animation-name: border-animate;
-	animation-duration: 1000ms;
+	animation-duration: 500ms;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+.text {
+	display: block;
+	padding: 30px;
+	background-color: red;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 5;
+}
 
-	animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+.text:hover {
+	animation: firstAnimation 2000ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 300ms infinite;
 }
 
 @keyframes scale-item {
@@ -47,13 +66,131 @@
 		border-style: dashed;
 	}
 }
+/* 
+@keyframes skew-rotate {
+	0% {
+		background-color:  ;a: skew(50deg);
+	}
+	30% {
+		transform: rotate(1turn);
+	}
+	60% {
+		transform: skew(60deg);
+	}
+	80% {
+		transform: skew(150deg);
+	}
+	100% {
+		transform: skew(180deg);
+	}
+} */
 
-.text {
-	display: block;
-	padding: 10px;
-	background-color: red;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+/* CSS Transform */
+
+.container-transform {
+	padding: 15px;
+	margin: 0 auto;
+	width: 1200px;
+	display: grid;
+	grid-template-columns: repeat(4, auto);
+	gap: 30px;
 }
+
+.box-1 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 200px;
+	height: 200px;
+	background-color: aqua;
+	border: 1px solid black;
+	box-shadow: 3px 2px 4px rgba(200, 150, 15, 0.8);
+	transition: all var(--time-cub);
+	transform-origin: center left;
+	transform-style: preserve-3d;
+}
+
+.box-text {
+	font-weight: 600;
+	font-size: 30px;
+	line-height: 1.25;
+}
+
+.box-1:nth-child(1) {
+	background-color: #fff;
+}
+
+.box-1:nth-child(2) {
+	background-color: pink;
+}
+
+.box-1:nth-child(3) {
+	background-color: green;
+}
+
+.box-1:nth-child(4) {
+	background-color: gray;
+}
+
+.box-1:nth-child(5) {
+	background-color: rebeccapurple;
+}
+
+.box-1:nth-child(6) {
+	background-color: blue;
+}
+
+.box-1:nth-child(7) {
+	background-color: yellowgreen;
+}
+
+.box-1:nth-child(8) {
+	background-color: goldenrod;
+}
+
+.box-1:nth-child(1):hover {
+	transform: rotate(75deg);
+}
+
+.box-1:nth-child(2):hover {
+	transform: rotateY(60deg);
+}
+
+.box-1:nth-child(3):hover {
+	transform: translate(30px, 80px);
+}
+
+.box-1:nth-child(4):hover {
+	transform: scale(1.2);
+}
+
+.box-1:nth-child(5):hover {
+	transform: skewX(25deg) skewY(40deg);
+}
+
+.box-1:nth-child(6):hover {
+	transform: matrix(1, 0, 0, 1, 34, -55);
+}
+
+.box-1:nth-child(7):hover {
+	transform: perspective(300px) rotateX(50deg) rotateX(-15deg) rotateZ(30deg);
+}
+
+.box-1:nth-child(8):hover {
+	transform: perspective(100px) translate3D(-40px, -50px, -60px);
+}
+
+.box-1:nth-child(9):hover {
+	transform: scale3d(1, -2, -2);
+}
+
+.box-1:nth-child(10):hover {
+	transform: rotate3d(1, 1, 1, 380deg);
+}
+
+.box-1:nth-child(11):hover {
+	backface-visibility: hidden;
+}
+
+/* .box-1:nth-child(12):hover {
+	transform: translate3d(15px, 12px, 18px) rotate3d(20px, 30px, 15px, 20deg); */
