--- a/css/styles.css
+++ b/css/styles.css
@@ -124,9 +124,9 @@ img {
 	animation: firstAnimation 5000ms linear infinite alternate forwards;
 }
 
-/* .svg-link:nth-child(2) {
-	animation: secondAnimation 5000ms linear infinite alternate forwards;
-} */
+.svg-link:nth-child(2) {
+	animation: transormAnimation 5000ms linear infinite alternate forwards;
+}
 
 /* .svg-link:nth-child(3) {
   animation: forwards;
@@ -173,13 +173,13 @@ img {
 
 @keyframes transormAnimation {
 	0% {
-		transform: rotate3d(0);
+		transform: rotate(0);
 	}
 	50% {
-		transform: rotate3d(180deg);
+		transform: rotate(180deg);
 	}
 	100% {
-		transform: rotate3d(360deg);
+		transform: rotate(360deg);
 	}
 }
 
