--- a/css/styles.css
+++ b/css/styles.css
@@ -270,3 +270,14 @@ img {
 .comment-text {
 	padding: 25px;
 }
+
+.form__practise {
+	display: flex;
+	flex-direction: column;
+	margin-top: 40px;
+	box-shadow: 2px 5px 4px rgba(11, 11, 11, 0.8);
+}
+
+.form-label {
+	display: block;
+}
