--- a/css/main.css
+++ b/css/main.css
@@ -443,7 +443,7 @@ img {
 .form {
   width: 600px;
   background-color: #ffffff;
-  border-radius: 6px;
+  border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
@@ -542,12 +542,195 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-top: 40px;
-  -webkit-box-shadow: 2px 5px 4px rgba(11, 11, 11, 0.8);
-          box-shadow: 2px 5px 4px rgba(11, 11, 11, 0.8);
+  -webkit-box-shadow: 2px 5px 4px 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 5px 4px 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.form-label {
+.form__modal {
+  position: relative;
+  padding: 20px;
+  width: 450px;
+  background-color: green;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.close-btn {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ffffff;
+  border-radius: 50%;
+  -webkit-transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), border-width 400ms cubic-bezier(0.4, 0, 0.2, 1) 250ms, -webkit-box-shadow 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), border-width 400ms cubic-bezier(0.4, 0, 0.2, 1) 250ms, -webkit-box-shadow 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 400ms cubic-bezier(0.4, 0, 0.2, 1), background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), border-width 400ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: box-shadow 400ms cubic-bezier(0.4, 0, 0.2, 1), background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), border-width 400ms cubic-bezier(0.4, 0, 0.2, 1) 250ms, -webkit-box-shadow 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-btn:hover, .close-btn:focus {
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: rgba(26, 25, 25, 0.655);
+  border-width: 3px;
+}
+
+.form__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form__group {
+  margin-bottom: 10px;
+  gap: 10px;
+}
+
+.form__label {
+  margin-bottom: 4px;
   display: block;
+  color: aqua;
+}
+
+.form__input {
+  width: 356px;
+  display: block;
+  padding: 4px 20px;
+  color: blueviolet;
+  background-color: yellow;
+}
+.form__input::-webkit-input-placeholder {
+  color: orangered;
+}
+.form__input::-moz-placeholder {
+  color: orangered;
+}
+.form__input:-ms-input-placeholder {
+  color: orangered;
+}
+.form__input::-ms-input-placeholder {
+  color: orangered;
+}
+.form__input::placeholder {
+  color: orangered;
+}
+
+.form__radio-wrp {
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+}
+
+.form__checkbox-label {
+  display: block;
+  padding: 4px;
+}
+
+.form__time {
+  display: block;
+  padding: 8px;
+}
+
+.form__commit {
+  display: block;
+  width: 410px;
+  margin: 0 auto;
+}
+
+.form__commit-text {
+  padding: 10px;
+  resize: none;
+}
+.form__commit-text::-webkit-input-placeholder {
+  color: olivedrab;
+}
+.form__commit-text::-moz-placeholder {
+  color: olivedrab;
+}
+.form__commit-text:-ms-input-placeholder {
+  color: olivedrab;
+}
+.form__commit-text::-ms-input-placeholder {
+  color: olivedrab;
+}
+.form__commit-text::placeholder {
+  color: olivedrab;
+}
+
+.btn {
+  display: block;
+  margin: 0 auto;
+  min-width: 30px;
+  padding: 6px 20px;
+  border: 1px solid #ffffff;
+  border-radius: 6px;
+  text-transform: uppercase;
+}
+
+.form__submit-btn {
+  margin-bottom: 20px;
+  text-align: center;
+  color: orange;
+  background-color: antiquewhite;
+  border-color: blue;
+  -webkit-box-shadow: 2px 4px 2px aquamarine;
+          box-shadow: 2px 4px 2px aquamarine;
+  -webkit-transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1), color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+  transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1), color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+  transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1), color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+  transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1), color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, -webkit-box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+}
+.form__submit-btn:hover, .form__submit-btn:focus {
+  -webkit-box-shadow: 2px 5px 4px 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 5px 4px 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-color: orangered;
+  background-color: #212121;
+  color: #ffffff;
+}
+
+.form__reset-btn {
+  margin-bottom: 20px;
+  text-align: center;
+  color: red;
+  background-color: antiquewhite;
+  border-color: blue;
+  -webkit-box-shadow: 2px 4px 2px aquamarine;
+          box-shadow: 2px 4px 2px aquamarine;
+  -webkit-transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1), color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+  transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1), color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+  transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1), color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+  transition: border-color 400ms cubic-bezier(0.4, 0, 0.2, 1), color 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, background-color 400ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms, -webkit-box-shadow 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+}
+.form__reset-btn:hover, .form__reset-btn:focus {
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-color: orangered;
+  background-color: #757575;
+  color: #ffffff;
 }
 
 @-webkit-keyframes firstAnimation {
@@ -769,8 +952,8 @@ img {
   border: 1px solid black;
   -webkit-box-shadow: 3px 2px 4px rgba(200, 150, 15, 0.8);
           box-shadow: 3px 2px 4px rgba(200, 150, 15, 0.8);
-  -webkit-transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
-  transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+  -webkit-transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
+  transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 100ms;
   -webkit-transform-origin: center left;
           transform-origin: center left;
   -webkit-transform-style: preserve-3d;
